feat: product (리뷰 조회 API 응답값 변경)